# rfb-encodings

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md
src/: tight.rs  zrle.rs
tests/: decoders.rs  golden_tests.rs
tests/expected/linux/: frame_100x75.raw  frame_100x75.tight  frame_100x75.tightpng  frame_100x75.zlib  frame_100x75.zrle  frame_64x64.raw  frame_64x64.tight  frame_64x64.tightpng  frame_64x64.zlib  frame_64x64.zrle
tests/fixtures/: frame_100x75.rgba  frame_64x64.rgba
